Fix dependencies: Use Create 6.0.8 for Forge 1.20.1
- Create 6.0.8 is available for Forge 1.20.1 on maven.createmod.net
- This dramatically simplifies the port since Create API stays 6.0.x
- Update all dependencies to correct versions for Forge 1.20.1:
  - Create 6.0.8-291
  - Flywheel 1.0.0-215
  - Ponder 1.0.92
  - Vanillin 1.1.3-278
  - Registrate MC1.20-1.3.11
  - JEI 15.20.0.129
  - Conditional Mixin 0.6.4
- Restore Create 6.0.x API references (catnip, ponder, etc.)
- Fix CDPCommon for Forge constructor pattern
- Fix CDPConfig for Forge config registration
- Fix ExistingFileHelperAccessor for Forge

https://claude.ai/code/session_01V3FAAe9XMucRupTzEdtHUz